--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,6 @@
 version: 2.1
 
-workflows:
-  test-deploy:
-    job:
-      - test
+
 jobs:
   test:
     docker: 
@@ -11,4 +8,7 @@ jobs:
     steps:
       - checkout
       - run: node --version
-      
+workflows:
+  test-deploy:
+    jobs:
+      - test
