--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,8 @@ jobs:
         auth:
           username: $docker_user_name
           password: $docker_pass  # context / project UI env-var reference
-      
+      #Error calling workflow: 'docker-cred'
+#Cannot find a definition for job named docker
     steps:
       - checkout
       - setup_remote_docker:
@@ -25,4 +26,4 @@ workflows:
       - test
   docker-cred:
     jobs:
-      - docker
+      - build
