--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
       - checkout
       - setup_remote_docker:
           docker_layer_caching: true
-      - run: docker images
+      - run: docker-compose -f docker-compose-build.yaml build --parallel
     
 workflows:
   test-deploy:
